--- a/src/components/Home/Hero/hero.module.styl
+++ b/src/components/Home/Hero/hero.module.styl
@@ -20,7 +20,7 @@
     clip-path polygon(0 100%, 100% 100%, 100% 0)
     animation fadeInBottom 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) 2600ms both
     background-color $primary-color
-    background-image linear-gradient(-270deg, $linear-from-color 0%, $linear-to-color 100%)
+    background-image linear-gradient(-270deg, #dadada 0%, #f6f7fe 100%)
   +above($tablet)
     text-align left
     &:after
@@ -43,7 +43,7 @@
   +above($tablet)
     line-height 5rem
     font-size 6.25rem
-    margin-bottom 2.5rem
+    margin-bottom 3.5rem
   span
     font-weight 300
     font-size inherit
