--- a/src/stylus/config.styl
+++ b/src/stylus/config.styl
@@ -7,9 +7,9 @@ $font-size = 16px
 $background-color = #f6f7fe
 $background-dark-color = #323232
 
-$primary-color = #e02929
+$primary-color = #eee333
 $secondary-color = #4b5b6c
-$tertiary-color = #fd7d7d
+$tertiary-color = #c9a61b
 $quarternary-color = #fceade
 
 $success-color = #d4edda
